<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_name"
        android:background="@drawable/login_email_tv_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_mighty_input_text_height">

        <ImageView
            android:id="@+id/iv_name"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/login_email_icon"
            android:layout_width="@dimen/login_mighty_email_width"
            android:layout_height="@dimen/login_mighty_email_height" />

        <EditText
            style="@android:style/Widget.EditText"
            android:id="@+id/et_name"
            android:layout_toRightOf="@+id/iv_name"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/transparent"
            android:paddingLeft="5dp"
            android:textColorHint="@color/login_et_color"
            android:textColor="@color/login_et_color"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:hint="@string/email"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mail"
        android:layout_below="@+id/layout_name"
        android:background="@drawable/login_email_tv_bg"
        android:layout_width="fill_parent"
        android:layout_marginTop="2dp"
        android:layout_height="@dimen/login_mighty_input_text_height">

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/login_email_icon"
            android:layout_width="@dimen/login_mighty_email_width"
            android:layout_height="@dimen/login_mighty_email_height" />

        <EditText
            style="@android:style/Widget.EditText"
            android:id="@+id/et_email"
            android:layout_toRightOf="@+id/iv_mail"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/transparent"
            android:paddingLeft="5dp"
            android:textColorHint="@color/login_et_color"
            android:textColor="@color/login_et_color"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:hint="@string/email"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_below="@id/layout_mail"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="2dp"
        android:layout_height="@dimen/login_mighty_input_text_height">

        <RelativeLayout
            android:background="@drawable/login_email_tv_bg"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/login_password_icon"
                android:layout_width="@dimen/login_mighty_email_width"
                android:layout_height="@dimen/login_mighty_email_height"/>

            <EditText
                style="@android:style/Widget.EditText"
                android:id="@+id/et_password"
                android:layout_toRightOf="@+id/iv_password"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/transparent"
                android:paddingLeft="5dp"
                android:textColorHint="@color/login_et_color"
                android:textColor="@color/login_et_color"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:hint="@string/password"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_email_tv_bg"
            android:layout_marginLeft="1dp"
            android:layout_weight="1">

            <EditText
                style="@android:style/Widget.EditText"
                android:id="@+id/et_confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/transparent"
                android:paddingLeft="5dp"
                android:textColorHint="@color/login_et_color"
                android:textColor="@color/login_et_color"
                android:cursorVisible="true"
                android:textCursorDrawable="@null"
                android:hint="@string/confirm_password"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

